# github-actions-version-check

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  release-and-publish.yml  release-on-main.yml
src/github_actions_version_check/: __main__.py  cache.py  checker.py  cli.py  discovery.py  github.py  models.py  parsing.py  xdg.py
tests/: test_cache.py  test_checker.py  test_cli.py  test_discovery.py  test_parsing.py
